[package]
name = "luckyshot"
version = "0.0.0"
edition = "2021"
description = "A CLI tool for one-shot code generations using RAG and file watching"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
